--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@
   display: block;
 }
 
-#text-id {
+.text {
+  color:rgb(177, 27, 27);
   font-family:monospace;
-  font-size:150%;
-  color:rgb(0, 0, 0);
+  font-size:130%;
 }
 
 #text-id {
   font-family:monospace;
   font-size:130%;
-  color:rgb(177, 27, 52);
+  color:rgb(177, 27, 27);
 }
